Add some more tests