@@ -2,7 +2,6 @@ package io.github.borewit.sanitize;
 
 import io.github.borewit.sanitize.util.CheckSvg;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 
 import java.io.ByteArrayOutputStream;
@@ -15,7 +14,10 @@ import java.nio.file.Paths;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 class SVGSanitizerTest {
 
@@ -62,6 +64,7 @@ class SVGSanitizerTest {
     "circleBlinkJS.svg",
     "eicar.svg",
     "form-action.svg",
+    "form-action3.svg",
     "javascriptalert.svg",
     "svg.svg",
     "SVG-alert.svg",
@@ -102,7 +105,7 @@ class SVGSanitizerTest {
     // Save sanitized SVG for debugging
     saveSvg(sanitizedSvg, svgTestFile);
 
-    assertFalse(CheckSvg.containsJavaScriptInStyle(sanitizedSvg), String.format("Sanitized \"%s\" contain not contain JavaScript", svgTestFile));
+    assertFalse(CheckSvg.containsJavaScriptInStyle(sanitizedSvg), String.format("Sanitized \"%s\" should not contain JavaScript", svgTestFile));
   }
 
   @ParameterizedTest
@@ -110,33 +113,45 @@ class SVGSanitizerTest {
   @ValueSource(strings = {
     "circleWithS.svg",
     "externalimage.svg",
+    "externalimage2.svg",
     "recursive-foreignobject.svg",
     "test(2).svg",
-    "test(3).svg"
+    "test(3).svg",
+    "test(4).svg",
+    "test-href-javascript.svg",
+    "test-href-javascript2.svg",
+    "test-href-javascript3.svg"
   })
   void sanitizeExternalResources(String svgTestFile) throws Exception {
     // Convert output to string for verification
     String dirtySvg = this.getFixtureAsString(svgTestFile);
-    assertTrue(CheckSvg.containsExternalResources(dirtySvg), String.format("Dirty \"%s\" should contains an external resource", svgTestFile));
+    assertTrue(CheckSvg.containsExternalResources(dirtySvg), String.format("Dirty \"%s\" should contain an external resource", svgTestFile));
 
     String sanitizedSvg = new SVGSanitizer().sanitize(dirtySvg);
 
     // Save sanitized SVG for debugging
     saveSvg(sanitizedSvg, svgTestFile);
 
-    assertFalse(CheckSvg.containsExternalResources(sanitizedSvg), String.format("Sanitized \"%s\" contains an external resource", svgTestFile));
+    assertFalse(CheckSvg.containsExternalResources(sanitizedSvg), String.format("Sanitized \"%s\" should not contain an external resource", svgTestFile));
   }
 
-  @Disabled("SVG exploits not supported yet")
   @ParameterizedTest
-  @DisplayName("Sanitize JavaScript code")
+  @DisplayName("Sanitize entity references")
   @ValueSource(strings = {
-    "billionlaughs.svg",
-    "circleBlink.svg",
-    "S.svg",
+    "billionlaughs.svg"
   })
-  void sanitizeSvgExploits(String svgTestFile) {
-    // ToDo?
+  void sanitizeSvgExploits(String svgTestFile) throws Exception {
+    // Convert output to string for verification
+    String dirtySvg = this.getFixtureAsString(svgTestFile);
+    assertTrue(CheckSvg.containsExternalEntities(dirtySvg), String.format("Dirty \"%s\" should contain entity definitions", svgTestFile));
+
+    String sanitizedSvg = new SVGSanitizer().sanitize(dirtySvg);
+
+    // Save sanitized SVG for debugging
+    saveSvg(sanitizedSvg, svgTestFile);
+
+    assertFalse(CheckSvg.containsExternalEntities(sanitizedSvg), String.format("Sanitized \"%s\" should not contain entity definitions", svgTestFile));
+    assertTrue(dirtySvg.length() > sanitizedSvg.length(), String.format("Sanitized \"%s\" should be smaller than original", svgTestFile));
   }
 
   private InputStream getFixture(String fixtureName) {
@@ -157,7 +172,7 @@ class SVGSanitizerTest {
     String sanitizedFilename = testFileName.replace(".svg", "-sanitized.svg");
 
     String outputPath = SANITIZED_PATH + "/" + sanitizedFilename;
-    Files.write(Paths.get(outputPath), sanitizedSvg.getBytes("UTF-8"));
+    Files.writeString(Paths.get(outputPath), sanitizedSvg);
   }
 
 }
